tests/ui/pattern/uninit-trivial.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/uninit-trivial.rs:6:10
   |
LL |     let x;
   |         - binding declared here but left uninitialized
LL |     let (0 | _) = x;
   |          ^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x = 42;
   |           ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
